--- a/PoCProject/src/main/java/views/mng/ThemSuKienFrame.form
+++ b/PoCProject/src/main/java/views/mng/ThemSuKienFrame.form
@@ -78,11 +78,11 @@
                                   <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="jComboBox1" pref="95" max="32767" attributes="0"/>
-                              <Component id="jTextFieldChiPhi" max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="jTextFieldChiPhi" min="-2" pref="95" max="-2" attributes="0"/>
+                              <Component id="jComboBox1" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="-2" pref="77" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
                           <Component id="jTextFieldMoTa" max="32767" attributes="0"/>
@@ -197,9 +197,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextFieldLoaiSk">
-          <Properties>
-            <Property name="text" type="java.lang.String" value=" "/>
-          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel6">
           <Properties>
